# robotics_contorller

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.json
.claude_code/: CONTEXT_BRIEF.md  DESIGN_DECISIONS.md  PROJECT_STATE.md  SESSION_LOG.md  WORKFLOW.md
cmake/: toolchain_arm_gcc.cmake  toolchain_pc.cmake
docs/: CubeMX_配置清单.md  code_review_report_2026-06-17_codex.md  code_review_report_2026-06-18_codex.md  system_architecture.md
idl/: enums.yaml  faults.yaml  messages.yaml  parameters.yaml
mcu_a/: CMakeLists.txt
mcu_a/application/: app_freertos.c  app_tasks.c  main.c
mcu_a/board/: stm32g4xx_hal_conf.h  stm32g4xx_it.c  stm32g4xx_it.h  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c
mcu_a_cubemx/mcu_A/: .mxproject  CMakeLists.txt  mcu_A.ioc
mcu_a_cubemx/mcu_A/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
mcu_a_cubemx/mcu_A/Core/Src/: app_freertos.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
mcu_a_cubemx/mcu_A/USB_Device/App/: usb_device.c  usbd_desc.c
mcu_a_cubemx/mcu_A/cmake/stm32cubemx/: CMakeLists.txt
mcu_b/: CMakeLists.txt
mcu_b/application/: app_freertos.c  app_tasks.c  main.c
mcu_b/board/: peripherals.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.h  usbd_conf.c  usbd_desc.h
mcu_b_cubemx/: mcu_B.ioc
mcu_b_cubemx/Core/Src/: main.c
mcu_b_cubemx/mcu_B/: .mxproject  CMakeLists.txt  STM32G474XX_FLASH.ld  mcu_B.ioc
mcu_b_cubemx/mcu_B/Core/Inc/: main.h
mcu_b_cubemx/mcu_B/Core/Src/: main.c  stm32g4xx_it.c
mcu_b_cubemx/mcu_B/cmake/: gcc-arm-none-eabi.cmake
mcu_b_cubemx/mcu_B/cmake/stm32cubemx/: CMakeLists.txt
mcu_common/: CMakeLists.txt
mcu_common/drivers/: canfd_driver.c  canfd_driver.h  rs485_driver.c  rs485_driver.h  spi_slave_driver.c  spi_slave_driver.h
mcu_common/osal/: osal.h  osal_event.h  osal_freertos.c  osal_posix.c  osal_queue.h  osal_semaphore.h  osal_task.h  osal_timer.h  osal_types.h
mcu_common/osal/freertos_stubs/: FreeRTOS.h
mcu_common/protocol/: link_manager.c  link_manager.h  protocol_codec.c  protocol_codec.h  protocol_crc.c  protocol_crc.h  protocol_frame.h  protocol_session.c  protocol_session.h  protocol_types.h
mcu_common/transport/: transport_interface.c  transport_interface.h
rk3588/: CMakeLists.txt
rk3588/protocol/: protocol_codec.cpp  protocol_codec.hpp
tests/integration/: CMakeLists.txt  test_spi_full_duplex.c  test_transport_spi.c
tests/mock/: mock_canfd.c  mock_canfd.h  mock_hal.c  mock_hal.h  mock_rs485.c  mock_rs485.h  mock_spi.c  mock_spi.h
tests/unit/: CMakeLists.txt
tests/unit/mcu_common/: CMakeLists.txt  test_link_manager.c  test_protocol_codec.c  test_protocol_crc.c  test_protocol_session.c
tools/codegen/: generate.py
tools/git/: README.md  _hook_release_output.py  changelog.sh  commit-msg  hook-release-check.sh  prepare-commit-msg  release.sh  version.sh
